styles.css
body {
  margin: 0;
  padding: 0;
  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
}

#myBtn {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 99;
  border: 1px solid #072684;
  cursor: pointer;
  padding: 10px;
  border-radius: 5px;
  background-color: #072684;
}

.header {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.animated-element {
  opacity: 0;
  transform: translateY(20px);
  transition: opacity 0.5s, transform 0.5s;
}

.aos-animate .animated-element {
  opacity: 1;
  transform: translateY(0);
}

.content {
  padding: 20px;
}

nav {
  position: fixed;
  top: 10px;
  right: 0;
  padding: 15px;
  background-color: white;
  opacity: 50%;
  /* width: 100%; */
  z-index: 1000;
}

nav a {
  color: black;
  text-decoration: none;
  margin: 0 15px;
  font-size: 14px;
  font-weight: 600px;
  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.hero-section {
  height: 100vh;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: left;
  text-align: left;
  margin-left: 22%;
}

.hero-section h1 {
  display: flex;
  flex-wrap: wrap;
  font-size: 56px;
  font-weight: 900;
  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
  color: black;
  margin: 10px 0;
}

.hero-section h2 {
  font-size: 20px;
  font-weight: 400;
  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.hero-section p {
  font-size: 16px;
  font-weight: 300;
  max-width: 800px;
  line-height: 1.5;
}

#projects {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

#projects h3 {
  display: flex;
  justify-content: left;
  align-items: center;
  margin-left: 22%;
}

.project {
  display: flex;
  flex-wrap: wrap;
  flex-direction: columns;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
  margin: 0 auto;
  max-width: 800px;
  margin-top: 10px;
}

.project-image {
  flex: 1;
  flex-wrap: wrap;
}

.project-image img {
  display: flex;
  flex-direction: column;
  height: 400px;
  max-width: 100%;
}

.project-image p {
  font-size: 12px;
}

.project-content {
  flex: 1;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  max-width: 400px;
  line-height: 20px;
}

.project-urls {
  filter: grayscale(100%);
  margin:0 ;
  font-size: 24px;
  align-items: center;
}

.project-urls a:hover {
  filter: grayscale(0%);
}

.title {
  font-size: 28px;
  font-weight: 900;
  margin-bottom: 16px;
  line-height: 32px;
  color: #363636;
  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.paragraph {
  font-size: 16px;
  margin-bottom: 20px;
  line-height: 20px;
  font-weight: 300;
  font-family: Helvetica;
  color: #868686;
  text-align: left;
}

.note {
  font-size: 14px;
  color: #868686;
  font-weight: 200;
  font-family: Helvetica;
}

.learn-more {
  background-color: white;
  padding: 20px;
  text-align: center;
}

.learn-more a {
  text-decoration: none;
  color: #333;
  font-weight: bold;
}

.learn-more a:hover {
  text-decoration: underline;
}

#contacts-container {
  margin-top: 20px;
  display: flex;
  justify-content: center; 
  align-items: center; 
  height: 20vh; 
  flex-direction: column;
}

.contacts {
  display: flex;
  justify-content: center;
  align-items: center;
}

.contacts a {
  align-items: center;
  font-size: 24px; 
  margin: 0 10px;
  filter: grayscale(100%);
}

.contacts a:hover {
  filter: grayscale(0%);
}

#services-container {
  /* height: 100vh; */
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: left;
  text-align: left;
  margin-left: 22%;
}

.box-container {
  display: flex;
  flex-direction: row;
}

.box {
  flex: 1;
  border: 1px solid #000;
  margin: 0 10px;
  padding: 20px;
  text-align: left;
}

/* @media screen and (min-width: 768px) {
  .hero-section img {
      float: left;
      margin-right: 20px;
      max-width: 50%;
  }
} */

/* Aturan dasar yang tetap sama */

/* Styles for screens smaller than 768px (mobile devices) */
@media screen and (max-width: 768px) {
  nav {
    position: relative;
    top: 0;
    right: 0;
    left: 0;
    padding: 10px;
    opacity: 100%;
    background-color: #ffffff; /* Menambahkan warna latar belakang agar lebih terlihat */
  }

  .hero-section {
    margin-left: 0;
    text-align: center;
  }

  .hero-section img {
    max-width: 100%;
    margin-right: 0;
  }

  #projects h3 {
    margin-left: 0;
    text-align: center;
  }

  .project {
    flex-direction: column; /* Mengubah tata letak agar proyek ditampilkan dalam satu kolom pada perangkat seluler */
    margin: 0 auto;
    width: 80%; /* Mengatur lebar proyek agar tidak terlalu lebar pada perangkat seluler */
  }

  .project-image img {
    max-width: 100%; /* Mengatur gambar agar tidak melebihi lebar parent container */
    height: auto; /* Mengatur tinggi gambar agar tetap proporsional */
  }

  .project-content {
    text-align: center; /* Mengatur teks agar berada di tengah pada perangkat seluler */
    max-width: 100%; /* Mengatur lebar agar tidak melebihi parent container */
  }

  .project-urls {
    justify-content: center; /* Mengatur ikon agar berada di tengah pada perangkat seluler */
  }

  #contacts-container {
    margin-top: 10px;
    height: auto;
  }

  .contacts {
    flex-direction: row;
    align-items: center; /* Mengatur agar ikon kontak berada di tengah pada perangkat seluler */
  }
}

/* Styles for screens larger than 768px */
@media screen and (min-width: 768px) {
  /* Tidak ada perubahan pada aturan CSS untuk lebar layar di atas 768px */
}

